# structs/requests/signIn.go
@@ -9,3 +9,12 @@ type ChangePassword struct {
 	OldPassword string
 	NewPassword string
 }
+
+type SendOTP struct {
+	MobileNumber string
+}
+
+type VerifyOTP struct {
+	MobileNumber string
+	Code         string
+}
